--- a/frontend/eco-insight/index.html
+++ b/frontend/eco-insight/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="/src/styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/dompurify@2.4.0/dist/purify.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
     <title>Vite + React</title>
