--- a/frontend/eco-insight/index.html
+++ b/frontend/eco-insight/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/dompurify@2.4.0/dist/purify.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
-    <title>Vite + React</title>
+    <title>EcoInsight</title>
   </head>
   <body>
     <div id="root"></div>
