--- a/frontend/eco-insight/index.html
+++ b/frontend/eco-insight/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/dompurify@2.4.0/dist/purify.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-
+    <script src="conf.js"></script>
     <title>EcoInsight</title>
   </head>
   <body>
